# cicero-credit-networks

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE-CODE  LICENSE-DATA  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: reproduce.yml
config/: calculation_parameters.json  method_registry.yml  o56_borrower_components.csv  objectives.yml
data/amounts/: amount_values.csv
data/canonical/: cicero_credit_records.csv  data_dictionary.md  schema.csv  source_manifest.csv
data/contributions/: README.md
data/decisions/: accepted_proposals.csv  proposal_record_crosswalk.csv  rejected_proposals.csv
data/exposure_groups/: actor_aliases.csv  actor_occurrences.csv  exposure_amounts.csv  paper_exposure_crosswalk.csv  relations.csv  reviewed_overrides.csv  reviewed_record_decisions.csv
docs/: numerical_precision.md  objectives.md  paper_findings.md  paper_findings_manifest.csv  source_editions.md
docs/audits/: SEC_STAGED_IDENTIFIER_MIGRATION_AUDIT_HANDOFF_2026-07-15.md
paper/: README.md
results/official/: headline_values.csv  o5_6_distribution_grid.csv  o5_6_distribution_values.csv  o5_6_k_sensitivity.csv  o5_missing_edge_probability_rule_sensitivity.csv  paper_findings.csv
scripts/analysis/: analyze_cicero_loans.py  analyze_loan_edges.py  build_actor_graph.py  build_objective_01_02_graph_findings.py  build_objective_03_intermediaries.py  build_objective_04_credit_mechanisms.py
src/cicero_credit/: cli.py  (+1 more)
tests/: test_release.py
validation/: checksums.sha256  latest_verification.json  release_expected_values.csv
(+68 files in other folders)
